Added a base and wrote a method that will display events on the screen

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/forum
+spring.datasource.username=root
+spring.datasource.password=root
 
+spring.jpa.hibernate.ddl-auto=validate
+
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+#spring.jpa.show-sql=true
+spring.flyway.enabled=true
+spring.flyway.out-of-order=true
+spring.flyway.baseline-on-migrate=false
+
+server.servlet.session.cookie.name=this_session
